# ai-ddd-workshop

./: README.md
images/: neuro-symbolic-ai-workflow.mermaid
use-case-1-natural-language-data-querying/: README.md
use-case-1-nlp-to-sql/: docker-compose.yml
use-case-2-data-extraction-and-analysis/: README.md  docker-compose.yml  requirements.txt
use-case-3-domain-specific-model-creation/: docker-compose.yml  (+2 more)
use-case-3-domain-specific-model-creation/domain-specific-model-pipeline/: README.md  pyproject.toml  requirements.txt
use-case-3-domain-specific-model-creation/domain-specific-model-pipeline/conf/: logging.yml
use-case-3-domain-specific-model-creation/domain-specific-model-pipeline/conf/base/: catalog.yml  parameters_fine_tune_model.yml  parameters_training_data_preparation.yml
use-case-3-domain-specific-model-creation/domain-specific-model-pipeline/conf/local/: credentials.yml
use-case-3-domain-specific-model-creation/domain-specific-model-pipeline/docs/source/: conf.py  index.rst
use-case-3-domain-specific-model-creation/domain-specific-model-pipeline/src/domain_specific_model_pipeline/: __init__.py  __main__.py
use-case-3-domain-specific-model-creation/domain-specific-model-pipeline/src/domain_specific_model_pipeline/pipelines/fine_tune_model/: __init__.py  nodes.py  pipeline.py
use-case-3-domain-specific-model-creation/domain-specific-model-pipeline/src/domain_specific_model_pipeline/pipelines/training_data_preparation/: __init__.py  nodes.py  pipeline.py
use-case-3-domain-specific-model-creation/domain-specific-model-pipeline/tests/: test_run.py
use-case-3-domain-specific-model-creation/domain-specific-model-pipeline/tests/pipelines/fine_tune_model/: test_pipeline.py
use-case-3-domain-specific-model-creation/domain-specific-model-pipeline/tests/pipelines/training_data_preparation/: test_pipeline.py
(+20 files in other folders)
